--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,5 +15,7 @@
 homepage: "https://www.conversioncw.com"
 documentation: "https://support.conversioncow.com/hc/en-us"
 versions:
+  - sha: 464b3107e8fd39fb9f501885a881851dff46eea6
+    changeNotes: Updated field to match gallery style guide
   - sha: 32768e5470aed115172e4403a81020741b324207
     changeNotes: Initial Version
